[gd_scene load_steps=9 format=3 uid="uid://bckbtmbjw138"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_66wmg"]
[ext_resource type="Script" path="res://scripts/state_machine/stateMachine.gd" id="2_n1ksf"]
[ext_resource type="Script" path="res://scripts/state_machine/state_idle.gd" id="3_4ccrl"]
[ext_resource type="Script" path="res://scripts/state_machine/state_jump.gd" id="4_i1d22"]
[ext_resource type="Script" path="res://scripts/state_machine/state_fall.gd" id="5_d5h80"]
[ext_resource type="Script" path="res://scripts/state_machine/state_move.gd" id="6_nkgwd"]
[ext_resource type="Script" path="res://scripts/player/move_component_Player.gd" id="7_hhrt7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dn4h7"]
size = Vector2(20, 40)

[node name="Player" type="CharacterBody2D"]
position = Vector2(-20, 0)
script = ExtResource("1_66wmg")
metadata/_edit_vertical_guides_ = [40.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 10.0
offset_right = 30.0
offset_bottom = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dn4h7")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_n1ksf")
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state")]
script = ExtResource("3_4ccrl")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
move_state = NodePath("../move")

[node name="jump" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state")]
script = ExtResource("4_i1d22")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
move_state = NodePath("../move")

[node name="fall" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "jump_state", "move_state")]
script = ExtResource("5_d5h80")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
move_state = NodePath("../move")

[node name="move" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state")]
script = ExtResource("6_nkgwd")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")

[node name="move_component" type="Node" parent="."]
script = ExtResource("7_hhrt7")
jump_height = 150.0
jump_time_to_peak = 0.4
jump_time_to_descent = 0.375

[node name="animations" type="AnimatableBody2D" parent="."]

[node name="raycasts" type="Node2D" parent="."]

[node name="left_outer" type="RayCast2D" parent="raycasts"]
position = Vector2(5, 0)
scale = Vector2(7.135, 0.825)
target_position = Vector2(0, -26)

[node name="left_inner" type="RayCast2D" parent="raycasts"]
position = Vector2(15, 0)
scale = Vector2(7.135, 0.825)
target_position = Vector2(0, -26)

[node name="right_inner" type="RayCast2D" parent="raycasts"]
position = Vector2(25, 0)
scale = Vector2(7.135, 0.825)
target_position = Vector2(0, -26)

[node name="right_outer" type="RayCast2D" parent="raycasts"]
position = Vector2(35, 0)
scale = Vector2(7.135, 0.825)
target_position = Vector2(0, -26)
